{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 27,
  "lineage": "56a7223b-1003-f31d-e731-aa7a235ec9f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03306f498adebec4b",
            "association_id": "eipassoc-0cac2ab467dffd2a4",
            "domain": "vpc",
            "id": "eipalloc-03306f498adebec4b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08c1fc1234ce2c4c1",
            "private_dns": "ip-10-0-0-175.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.175",
            "public_dns": "ec2-52-79-161-223.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.161.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:internet-gateway/igw-00647675abdd87f7b",
            "id": "igw-00647675abdd87f7b",
            "owner_id": "311747771851",
            "tags": {
              "Name": "inflearn-terraform-igw"
            },
            "tags_all": {
              "Name": "inflearn-terraform-igw"
            },
            "vpc_id": "vpc-0b49cf0f8c4a6c83d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03306f498adebec4b",
            "connectivity_type": "public",
            "id": "nat-06dc49522bf741c75",
            "network_interface_id": "eni-08c1fc1234ce2c4c1",
            "private_ip": "10.0.0.175",
            "public_ip": "52.79.161.223",
            "subnet_id": "subnet-064bd74c7fb4e58ed",
            "tags": {
              "Name": "inflearn-terraform-nat-gateway"
            },
            "tags_all": {
              "Name": "inflearn-terraform-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d6461ea05b2dbdf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06dc49522bf741c75",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d6461ea05b2dbdf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:route-table/rtb-05d6461ea05b2dbdf",
            "id": "rtb-05d6461ea05b2dbdf",
            "owner_id": "311747771851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06dc49522bf741c75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inflearn-terraform-private-rt"
            },
            "tags_all": {
              "Name": "inflearn-terraform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49cf0f8c4a6c83d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:route-table/rtb-03f669bf6ced63bc1",
            "id": "rtb-03f669bf6ced63bc1",
            "owner_id": "311747771851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00647675abdd87f7b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inflearn-terraform-public-rt"
            },
            "tags_all": {
              "Name": "inflearn-terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49cf0f8c4a6c83d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0533a6f8984cecfa7",
            "route_table_id": "rtb-05d6461ea05b2dbdf",
            "subnet_id": "subnet-0886f2e75811826e3"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8feb456d499b27",
            "route_table_id": "rtb-03f669bf6ced63bc1",
            "subnet_id": "subnet-064bd74c7fb4e58ed"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:subnet/subnet-0886f2e75811826e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0886f2e75811826e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747771851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inflearn-terraform-private-subnet"
            },
            "tags_all": {
              "Name": "inflearn-terraform-private-subnet"
            },
            "vpc_id": "vpc-0b49cf0f8c4a6c83d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:subnet/subnet-064bd74c7fb4e58ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064bd74c7fb4e58ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747771851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inflearn-terraform-public-subnet"
            },
            "tags_all": {
              "Name": "inflearn-terraform-public-subnet"
            },
            "vpc_id": "vpc-0b49cf0f8c4a6c83d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:vpc/vpc-0b49cf0f8c4a6c83d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3fe5960937a9c2b",
            "default_route_table_id": "rtb-0742c71d63b34c5e8",
            "default_security_group_id": "sg-0e57210b02836f7b7",
            "dhcp_options_id": "dopt-0ab312133475d2758",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b49cf0f8c4a6c83d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0742c71d63b34c5e8",
            "owner_id": "311747771851",
            "tags": {
              "Name": "inflearn-terraform-vpc"
            },
            "tags_all": {
              "Name": "inflearn-terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311747771851:vpc-endpoint/vpce-0991e20d7d5803d51",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "52.219.56.0/22"
            ],
            "id": "vpce-0991e20d7d5803d51",
            "owner_id": "311747771851",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b49cf0f8c4a6c83d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}